GNOME Bugzilla – Bug 682361
gsd_wacom_device_get_display_rotation() may return an invalid rotation value
Last modified: 2012-08-21 15:31:45 UTC
in case of error when invoking gnome_rr_screen_new(). The function gsd_wacom_device_get_display_rotation() is expected to return a GsdWacomRotation, returning -1 in case of error is not a valid rotation value.
Created attachment 222007 [details] [review] Proposed patch Trivial patch to address the issue.
Patch pushed to git