wacom: return a valid rotation value in case of error

when the gnome_rr_screen_new() fails.

The function gsd_wacom_device_get_display_rotation() is
expected to return a GsdWacomRotation, returning -1 in case
of error is not a valid rotation value.

https://bugzilla.gnome.org/show_bug.cgi?id=682361